[UI] Add face icons to allowed users selection, fix alignment

--- a/src/smartapp/web/css/common.scss
+++ b/src/smartapp/web/css/common.scss
@@ -139,3 +139,10 @@ input:focus, textarea:focus {
   text-decoration: none;
   color: initial;
 }
+
+.radio-label {
+  display: flex;
+  align-items: center;
+  width: 85vh;
+  max-width: 320px;
+}
