--- a/src/smartapp/web/css/modal.scss
+++ b/src/smartapp/web/css/modal.scss
@@ -71,3 +71,7 @@
   color: #969696;
   padding-top: 4px;
 }
+
+#new-user-btn {
+  margin-top: 10px;
+}
