--- a/src/smartapp/web/css/users.scss
+++ b/src/smartapp/web/css/users.scss
@@ -16,12 +16,6 @@
   margin-left: 5px;
 }
 
-.user-radio-label {
-  display: flex;
-  align-items: center;
-  min-width: 50vw;
-}
-
 .user-you-label {
   background: rgb(134, 196, 162);
   border-radius: 5px;
